--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "mongoose": "^6.8.3"
   }
 }
